# ainame

./: .env.example  .gitignore  AGENTS.md  README.md  dependencies.py  init_pg_memory.py  main.py  pyproject.toml  rag_worker.py  test_main.http
ainamebackend/: .env.example  Dockerfile  alembic.ini  dependencies.py  docker-compose.yml  init_pg_memory.py  main.py  nginx.conf  pyproject.toml  redisdemo.py  requirements.txt
ainamebackend/core/: aigc_tools.py  marketplace_service.py  order_expiry.py  payment_urls.py  rag_service.py  tools.py
ainamebackend/models/: __init__.py  community.py  finance.py  marketplace.py  user.py
ainamebackend/repository/: admin_repo.py  marketplace_repo.py  membership_repo.py  payment_repo.py  visual_repo.py
ainamebackend/routers/: admin_marketplace_router.py  admin_router.py  asset_router.py  marketplace_router.py  membership_router.py  name_router.py  payment_router.py  visual_router.py
ainamebackend/schemas/: admin_schemas.py  asset_schemas.py  community_schemas.py  marketplace_schemas.py  membership_schemas.py  name_schemas.py  payment_schemas.py  user_schemas.py  visual_schemas.py
ainamebackend/scripts/: init_pg_memory.py  test_bailian_image_api.py
ainamebackend/services/: __init__.py  alipay_service.py  brand_kit_service.py  name_report_service.py  quota_service.py  visual_service.py
ainamebackend/settings/: __init__.py
ainamebackend/tests/: conftest.py  test_alipay_payment.py  test_expert_chat_wallet.py  test_marketplace.py  test_membership.py  test_name_report_pdf.py  test_order_expiry.py  test_package_management.py  (+1 more)
(+99 files in other folders)
