[project]
name = "ainame"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.2",
    "aiomysql>=0.3.2",
    "alembic==1.13.2",
    "cryptography<48.0.0",
    "fastapi-mail>=1.6.4",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langchain==1.1.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.2",
    "langchain-deepseek==1.0.1",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pypdf>=6.13.2",
    "reportlab>=4.4.5",
    "redis>=8.0.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
